chore: completed chatbot tutorial

--- a/notebooks/langchain/chatbot.ipynb
+++ b/notebooks/langchain/chatbot.ipynb
@@ -103,7 +103,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!pip install -qU langgraph>0.2.27 langchain-openai"
+      ],
+      "metadata": {
+        "id": "QQjlvqlI2Do_"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import getpass\n",
+        "import os\n",
+        "\n",
+        "os.environ[\"OPENAI_API_KEY\"] = getpass.getpass(\"OPENAI API KEY: \")\n"
+      ],
+      "metadata": {
+        "id": "lcXouOxq2Kcp",
+        "outputId": "31179bd7-ea19-464f-dd66-b27c4d4c3728",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "OPENAI API KEY: ··········\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "L2Uq8am90Y95"
       },
@@ -128,21 +165,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "z8IkOYRx0Y96",
-        "outputId": "d6bc5bc8-ba46-4e88-aebe-901ecac2ab6b"
+        "outputId": "07100635-0ebb-40b9-b7b6-84855cad1928",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "AIMessage(content='Hi Bob! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 10, 'prompt_tokens': 11, 'total_tokens': 21, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_0705bf87c0', 'finish_reason': 'stop', 'logprobs': None}, id='run-5211544f-da9f-4325-8b8e-b3d92b2fc71a-0', usage_metadata={'input_tokens': 11, 'output_tokens': 10, 'total_tokens': 21, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+              "AIMessage(content='Hi Bob! How can I assist you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 11, 'prompt_tokens': 11, 'total_tokens': 22, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BEMuG7pL4YZwnxWFCzjl3ljmMoW0y', 'finish_reason': 'stop', 'logprobs': None}, id='run-73dae08b-0283-4d1e-aacd-2283a64fe496-0', usage_metadata={'input_tokens': 11, 'output_tokens': 11, 'total_tokens': 22, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
             ]
           },
-          "execution_count": 3,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ],
       "source": [
@@ -162,21 +202,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "ogqHOz6r0Y96",
-        "outputId": "fd24ae9f-3ebf-4dbc-9f12-d36a4cf49608"
+        "outputId": "80c7c24e-f6db-4376-b63e-fae388e64fa0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "AIMessage(content=\"I'm sorry, but I don't have access to personal information about users unless it has been shared with me in the course of our conversation. How can I assist you today?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 34, 'prompt_tokens': 11, 'total_tokens': 45, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_0705bf87c0', 'finish_reason': 'stop', 'logprobs': None}, id='run-a2d13a18-7022-4784-b54f-f85c097d1075-0', usage_metadata={'input_tokens': 11, 'output_tokens': 34, 'total_tokens': 45, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+              "AIMessage(content=\"I'm sorry, but I don't have access to personal information unless you share it with me during our conversation. What would you like me to call you?\", additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 11, 'total_tokens': 42, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BEMuUctfAZqecWzNhRmoNFWq7xff2', 'finish_reason': 'stop', 'logprobs': None}, id='run-0692ccbd-fd0e-4c22-81ac-d191ac6cfbc2-0', usage_metadata={'input_tokens': 11, 'output_tokens': 31, 'total_tokens': 42, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -199,21 +242,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "vMOWYZBN0Y97",
-        "outputId": "533bb180-5692-4091-db12-e54dfbee1286"
+        "outputId": "95a78643-a31c-42d3-e539-23ef5e1983d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "AIMessage(content='Your name is Bob! How can I help you today, Bob?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 14, 'prompt_tokens': 33, 'total_tokens': 47, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_0705bf87c0', 'finish_reason': 'stop', 'logprobs': None}, id='run-34bcccb3-446e-42f2-b1de-52c09936c02c-0', usage_metadata={'input_tokens': 33, 'output_tokens': 14, 'total_tokens': 47, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
+              "AIMessage(content='Your name is Bob! How can I help you today?', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 13, 'prompt_tokens': 33, 'total_tokens': 46, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_b8bc95a0ac', 'id': 'chatcmpl-BEMuhmO9Yl3MU8SDF8Hn8AA3xS8nK', 'finish_reason': 'stop', 'logprobs': None}, id='run-a9e347df-4ee0-4223-92a6-858724293b58-0', usage_metadata={'input_tokens': 33, 'output_tokens': 13, 'total_tokens': 46, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})"
             ]
           },
-          "execution_count": 5,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
@@ -257,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "ptcM03gZ0Y97"
       },
@@ -296,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "4RKAkoDn0Y97"
       },
@@ -318,15 +364,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "mxgCm36-0Y98",
-        "outputId": "98ca8128-5bd6-4079-a702-0727c26c1a2d"
+        "outputId": "81fed5a0-2409-4912-dac0-d70d748fd593",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
@@ -344,15 +393,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "X_m-A-7C0Y98",
-        "outputId": "dbe6bd28-217b-481a-de12-c1ca991752e9"
+        "outputId": "fb9937d3-c7f9-405f-fef5-3c146a8cff0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
@@ -379,19 +431,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "R7f7GxJV0Y98",
-        "outputId": "2b7a3c8a-909a-4347-aeb2-f17a269ca48a"
+        "outputId": "2ba74900-c8b0-46cb-f62c-00d59f553185",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
-            "I'm sorry, but I don't have access to personal information about you unless you've shared it in this conversation. How can I assist you today?\n"
+            "I'm sorry, but I don't know your name. If you'd like to share it or if you have a specific name you'd like me to use, feel free to let me know!\n"
           ]
         }
       ],
@@ -488,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "FaP9i2Od0Y98"
       },
@@ -518,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "WhJeTAqe0Y99"
       },
@@ -553,19 +608,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "u_Nir-Pn0Y99",
-        "outputId": "bdc8ea24-6cc4-44e1-e270-4d9a5668a530"
+        "outputId": "666b90b0-f3c9-4aac-a1c1-81f5109a62e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
-            "Ahoy there, Jim! What brings ye to these waters today? Be ye seekin' treasure, knowledge, or perhaps a good tale from the high seas? Arrr!\n"
+            "Ahoy there, Jim! What brings ye to these treacherous waters today? Be there somethin’ ye be needin’ help with? Arrr!\n"
           ]
         }
       ],
@@ -580,19 +638,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "aysdO0de0Y99",
-        "outputId": "fd4c70d1-0d7c-4570-d427-c7ceab27b3fd"
+        "outputId": "6fe9c551-c7c0-4f55-e57d-3fa65c8e83d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
-            "Ye be called Jim, matey! A fine name fer a swashbuckler such as yerself! What else can I do fer ye? Arrr!\n"
+            "Ye be called Jim, matey! A fine name for a true sea dog. What else can I do fer ye? Arrr!\n"
           ]
         }
       ],
@@ -615,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "k9HlVjkU0Y99"
       },
@@ -643,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "VYA-O1y50Y99"
       },
@@ -682,15 +743,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "1iNHK0Mn0Y9-",
-        "outputId": "c82aadc5-bc53-42cf-e3dd-5c117a0cd75a"
+        "outputId": "1d48e494-d30b-4c62-efcc-bad1e1b27342",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
@@ -723,19 +787,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "bIVGSYSA0Y9-",
-        "outputId": "4206f8c9-8198-4c70-9d22-b31372601808"
+        "outputId": "974a85f2-7706-42c3-d921-32e4d649aa19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
-            "Tu nombre es Bob. ¿Hay algo más en lo que pueda ayudarte?\n"
+            "Tu nombre es Bob.\n"
           ]
         }
       ],
@@ -778,13 +845,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "D8p5tewS0Y9_",
-        "outputId": "168ea204-a6e7-45a2-c95a-69c87a5b193a"
+        "outputId": "c29c2ec3-8e0a-4503-acd2-1f558b31d829",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[SystemMessage(content=\"you're a good assistant\", additional_kwargs={}, response_metadata={}),\n",
@@ -796,9 +867,8 @@
               " AIMessage(content='yes!', additional_kwargs={}, response_metadata={})]"
             ]
           },
-          "execution_count": 23,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 20
         }
       ],
       "source": [
@@ -841,7 +911,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "1SHNb_N00Y9_"
       },
@@ -879,15 +949,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "EBlJase90Y9_",
-        "outputId": "939def9d-7f26-4e4d-a044-e2fbbd5f9a93"
+        "outputId": "915ac745-dad1-487b-fe11-2a027eb03a26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
@@ -920,19 +993,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "ASA6G5rP0Y-A",
-        "outputId": "f3cce7d5-33cb-49a9-c37e-48a469538b56"
+        "outputId": "07c2aa45-638b-41ee-d766-eeb299e2e29d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
             "\n",
-            "You asked what 2 + 2 equals.\n"
+            "You asked, \"What's 2 + 2?\"\n"
           ]
         }
       ],
@@ -975,21 +1051,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "JYIMgxrH0Y-A",
-        "outputId": "ac999de1-9a4e-49ae-f52f-77a3a2651517"
+        "outputId": "5c919b0d-5700-4542-e366-6412ec576fba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "|Hi| Todd|!| Here|’s| a| joke| for| you|:\n",
+            "|Hi| Todd|!| Sure|,| here|’s| a| joke| for| you|:\n",
             "\n",
-            "|Why| don|’t| skeleton|s| fight| each| other|?\n",
+            "|Why| did| the| scare|crow| win| an| award|?\n",
             "\n",
-            "|Because| they| don|’t| have| the| guts|!||"
+            "|Because| he| was| outstanding| in| his| field|!||"
           ]
         }
       ],
